# poing

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  makepad-visibility.patch
.github/workflows/: ci.yml
poing-core/: Cargo.toml
poing-core/examples/: diagnose.rs  generate.rs  inspect_models.rs
poing-core/src/: audio_buffer.rs  config.rs  lib.rs  model.rs  musicgen.rs  wav.rs
poing-editor/: Cargo.toml
poing-editor/src/: drag_source.rs  lib.rs  model.rs  theme.css  waveform.rs
poing-gui/: Cargo.toml
poing-gui/src/: lib.rs
poing-makepad-bridge/: Cargo.toml
poing-makepad-bridge/examples/: standalone_test.rs
poing-makepad-bridge/src/: editor.rs  lib.rs  linux.rs  macos.rs  windows.rs
poing-plugin/: Cargo.toml
poing-plugin/src/: lib.rs  main.rs
scripts/: download_model.sh
