[package]
name = "poing-makepad-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
makepad-widgets = { path = "../../../makepad/makepad/widgets" }
poing-gui = { path = "../poing-gui" }
poing-core = { path = "../poing-core" }
